--- a/style.css
+++ b/style.css
@@ -31,5 +31,82 @@
     display: flex;
     margin-left: 64px;
     font-size: 18px;
+    flex-shrink: 0; 
+}
+
+body {
+    background-color: #1f2937;
+}
+
+button {
+    background-color: #3882f6;
+    color: white;
+    border: none;
+    padding: 8px;
+    border-radius: 4px;
+}
+
+.body-1 {
+    display: flex;
+    padding-left: 56px;
+    padding-right: 56px;
+    justify-content: space-between;
+    height: auto;
+    background-color: #1f2937;
+    align-items: center;
+    flex-shrink: 1;
+
+}
+
+.image {
+    display: flex;
+    height: 240px;
+    width: 360px;
+    background-color: darkgray;
+    justify-content: center;
+    align-items: center;
+    margin: 48px;
     flex-shrink: 0;
+    margin-right: 240px;
+}
+
+.part-1 {
+    display: flex;
+    color: white;
+    font-size: 48px;
+    font-weight: bolder;
+    flex-shrink: 1;
+    flex-wrap: wrap;
+    width: 360px;
+    height: auto;
+    margin-bottom: 8px;
+    padding-left: 240px;
+    
+}
+
+.part-2 {
+    color: white;
+    display: flex;
+    margin-bottom: 8px;
+    width: 360px;
+    padding-left: 240px;
+}
+
+.part-3 {
+    display: flex;
+    margin: 36px;
+    padding-left: 240px;
+    margin-left: 0;
+}
+
+.section-1 {
+    display: flex;
+    gap: 28px;
+    flex-shrink: 1;
+    width: 64px;
+    padding: 24px;
+    padding-left: 128px;
+    flex-wrap: wrap;
+    margin-left: 128px;
+    justify-content: flex-end;
 }
