--- a/style.css
+++ b/style.css
@@ -110,3 +110,70 @@ button {
     margin-left: 128px;
     justify-content: flex-end;
 }
+
+.body-2 {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    height: 600px;
+    width: 100%;
+}
+
+.rando {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+    margin-top: 64px;
+}
+
+.boxes {
+    display: flex;
+    justify-content: space-around;
+    border-color: #3882f6;
+    border-radius: 4px;
+    border-width: 2px;
+    margin: auto;
+    flex-shrink: 0;
+}
+
+.box-1,
+.box-2,
+.box-3,
+.box-4 {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    padding: 50px;
+    margin-top: 50px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border: #3882f6;
+    border-style: solid;
+    border-radius: 8px;
+
+}
+
+.exp-1,
+.exp-2,
+.exp-3,
+.exp-4 {
+    display: flex;
+    height: auto;
+    color: #1f2937;
+    width: 150px;
+    flex-shrink: 0;
+}
+
+.words {
+    display: flex;
+    flex-shrink: 0;
+    justify-content: space-around;
+    margin-top: 12px;
+}
+
+.pic-info {
+    width: 100%;
+}
