Add images and replace filler words Added images to to place holder spots and replaced the filler words with content

--- a/style.css
+++ b/style.css
@@ -142,9 +142,7 @@ button {
 .box-3,
 .box-4 {
     display: flex;
-    width: 100px;
-    height: 100px;
-    padding: 50px;
+    padding: 0px;
     margin-top: 50px;
     background-color: white;
     justify-content: center;
@@ -230,6 +228,7 @@ button {
     width: 720px;
     height: 100px;
     align-items: center;
+    border-radius: 8px;
 
 }
 .sign-up {
